# yolov5onnex-c-

./: CMakeLists.txt  yolov5onnex.cpp
data/: yolo5.txt
